lab1/Test/L1-A-13-42.output
Error Type B at Line 3
Error Type B at Line 9
Error Type A at Line 17
Error Type A at Line 19
Error Type A at Line 19
Error Type B at Line 20
Error Type B at Line 25
Error Type A at Line 25
Error Type B at Line 28
Error Type A at Line 39
Error Type B at Line 41
Error Type B at Line 48
