lab1/Test/L1-A-13-42.cmm
struct {
};
float mhL ! ( ) {
  int QWXso [ 659800143 ] = zJ3ahccb3Y > huBIbui5yXXw5Zq0 
    - B9A * ! TMnDSj2tgoZLAJGb [ NRRK = lqYbK6OJFiZ = 
    v || Rp0V6veJFm && a6AmaDLiy65NnaJjnPU_ < Q + d / 
    ( lpE52 == fpcWSasOgEyy3b9b + ! ( pukU98B9Ps && UuFAysV7CyZE3NH 
    >= sh - - tukus2zsdQ0 ( c , CXtzM , SiEnZqA0eZsfaLPGJ 
    = = BKD3 = dqE31lUTOYcK7KKv5Zvt || cYiu2gCZ <= A6Fzp5_H8_4H 
    ) - liUFP1NkmQR + ehWELqQYymi0C ) . oSJmKf2 ) * 2131193180.1234874218 
    . tTF89319vN3mUSBRhnYj * ! arxL / FTJ1J4h2EakIc_ZUqD 
    ( RcRtSBPG8XknOUkQPLX ( ) ) . c5uOFoP ] != - 1662489802 
    ;
}
struct k9Va3fz92 ;
int ;
struct fzRL4GRosrHxXx0SYC dHh ^
;
^struct pNXBSOHqbkWE4qUi @{
  int mQIDVHsqdNr8m_KOYM , BZzO , l9bxrclh int ;
};
int ;
int sJibLNpwJA8q4Ti0QE ( int q9wNCLFUjEjk ) {
  if ( Lifsek_3Zbd )   v1EK3 ;
else else   if ( AhlwUP )   if ( &eIB2BC )   CfXA2sJUk 
    ;
else   if ( bFsKoLGcv )   while ( Tr6q3QgZfb4UlWXLyxWc 
    )   if ( JVOAqQQvU5l1ZNhWVxdo != )   aDY5Jfv9R ;
else {
  }





  if ( DOcEosQYew76pef1f )   UlQg ;

  return mQG39J0vbz7Bb6 ;
:}
int ;
int sz1Nwdp7S ( int , int BFbnZyKNEM_dOFS ) {
}
int ;
int ;
int v6EHf , _mKSWzTl_dAdOpE 

;
> 